# rust-practice

./: README.md
7_days_of_code/data_structures/: day1.rs  day2.rs
algorithms/binary_search/: binary_search.rs  binary_search_recursive.rs
algorithms/bitwise/: is_even.rs
algorithms/bubble_sort/: main.rs
algorithms/caesar/: main.rs
algorithms/code_wars/: basic_math_operations.rs  calculate_bmi.rs  counting_sheep.rs  dna_to_rna_conversion.rs  find_middle_element.rs  find_next_perfect_square.rs  greet_me.rs  school_paperwork.rs  sort_numbers.rs  string_repeat.rs  sum_of_numbers.rs  tesing123.rs  you_are_a_square.rs
algorithms/decimal_to_binary/: main.rs
algorithms/decimal_to_hex/: main.rs
algorithms/difference_volumes_cuboids/: main.rs
algorithms/factorial/: main.rs  simple_factorial.rs
algorithms/fibonacci/: fibonacci_recursion_memo.rs  main.rs
algorithms/greatest_common_divisor/: main.rs
algorithms/insertion_sort/: main.rs
algorithms/leetcode/: 1342_number_of_steps.rs  17_letter_comb_phone_number.rs  27_remove_element.rs
algorithms/matrix_multiplication/: main.rs
algorithms/merge_sort/: main.rs
algorithms/sum_sequence/: main.rs
pendulum/: Cargo.toml
simple-api/: Cargo.toml
simple-api/src/: handler.rs  main.rs  model.rs
todo-server/: Cargo.toml  Dockerfile
todo-server/src/: main.rs
todo-server/src/todo_api/db/: helpers.rs
todo-server/src/todo_api_web/: controller.rs  routes.rs
todo-server/src/todo_api_web/controller/: todo.rs
todo-server/src/todo_api_web/model/: todo.rs
todo-server/tests/todo_api_web/: controller.rs
(+26 files in other folders)
