[package]
name = "todo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_derive = "1.0.163"
num_cpus = "1.0"
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"

[dev-dependencies]
bytes="0.5.3"